# document-management-app

./: .env.example  .gitignore  README.md  debug_qdrant_connection.py  docker-compose.yaml  test_qdrant_connection.py
backend/: Dockerfile  pyproject.toml
backend/app/: document_api.py  main.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  App_new.tsx
