[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
qdrant-client = "^1.7.0"
openai = "^1.0.0"
python-multipart = "^0.0.18"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
PyPDF2 = "^3.0.0"
markdown = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
